# FunctionalNotifyer

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: command.py  handle.py  main.py  notify.yml  requirements.txt
bot/jobs/: famievent.py  hachicat_japan.py  hilife.py  okmart.py
bot/notify/famimart/: famievent.py
bot/plugin/: db_tools.py
bot/types/: __init__.py
bot/types/familymart/: __init__.py  event.py  product.py
bot/types/utils/configure/: bot.py  configure.py  info.py  log.py  logging.py
bot/utils/: configure.py  watchlog.py
